[package]
name = "year2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
regex = "1.7.0"
lazy_static = "1.4.0"
arrayvec = "0.7.2"
phf = "0.11.1"
phf_macros = "0.11.1"
